scribble/scribble-assertions/src/test/resources/good/extensions/assrtcore/safety/assrtprog/statevar/AssrtCoreTest08b.scr
module good.extensions.assrtcore.safety.assrtprog.statevar.AssrtCoreTest08b;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto1(role A, role B) @"<x:=3> x=3"
{
	1() from A to B; @"(x>2)"
	do Proto1(A, B); @"<3>"
}
//*/
