scribble/scribble-assertions/src/test/resources/bad/extensions/assrt/syntax/distinctannotvars/AssrtCoreTest01c.scr
module bad.extensions.assrt.syntax.distinctannotvars.AssrtCoreTest01c;


type <java> "java.lang.Integer" from "rt.jar" as int;  // FIXME: int keyword


//*
global protocol Proto1(role A, role B)
{
	1(x:int) from A to B;
	2(x:int) from A to B;
}
//*/
